fix(web-ui): Buttons not showing correctly

--- a/code/web-ui/src/styles/common.css
+++ b/code/web-ui/src/styles/common.css
@@ -462,6 +462,7 @@ pre code {
   display: flex;
   margin: 0 auto;
   justify-content: center;
+  text-align: center;
 }
 
 .projectCTA .ivu-alert {
